--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cmdk": "^1.0.4",
     "icons": "^1.0.0",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-tailwind-dashbord-video": "file:"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
