--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@antv/x6": "^2.18.1",
+    "@visactor/vtable": "^1.15.1",
     "cmdk": "^1.0.4",
+    "echarts": "^5.6.0",
     "icons": "^1.0.0",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-tailwind-dashbord-video": "file:"
+    "react-tailwind-dashbord-video": "file:",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
